force-app/main/default/objects/Sales_Organization__c/fields/Account_Sales_Organization__c.field-meta.xml
<CustomField>
    <fullName>Account_Sales_Organization__c</fullName>
    <label>Account Sales Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>