force-app/main/default/objects/Sales_Organization__c/fields/ApprovalDurationDays__c.field-meta.xml
<CustomField>
    <fullName>ApprovalDurationDays__c</fullName>
    <label>Approval Duration Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>