force-app/main/default/objects/Sales_Organization__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Sales Organizations</relationshipLabel>
    <relationshipName>Sales_Organizations</relationshipName>
    <type>Lookup</type>
</CustomField>