force-app/main/default/objects/Sales_Organization__c/fields/DomesticQuoteExpirationDays__c.field-meta.xml
<CustomField>
    <fullName>DomesticQuoteExpirationDays__c</fullName>
    <label>Domestic Quote Expiration Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>