force-app/main/default/objects/Sales_Organization__c/fields/DropShipAdjustment__c.field-meta.xml
<CustomField>
    <fullName>DropShipAdjustment__c</fullName>
    <label>Drop Ship Price Adjustment Factor</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>