force-app/main/default/objects/Sales_Organization__c/fields/DropShipPriceOption__c.field-meta.xml
<CustomField>
    <fullName>DropShipPriceOption__c</fullName>
    <label>Drop Ship Price Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>