force-app/main/default/objects/Sales_Organization__c/fields/English_TariffSurchargeNotes__c.field-meta.xml
<CustomField>
    <fullName>English_TariffSurchargeNotes__c</fullName>
    <label>English Surcharge Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>