force-app/main/default/objects/Sales_Organization__c/fields/External_Rebate_Price_Days__c.field-meta.xml
<CustomField>
    <fullName>External_Rebate_Price_Days__c</fullName>
    <label>Rebate Price Effective Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>