force-app/main/default/objects/Sales_Organization__c/fields/ExternalNonRebatePriceOption__c.field-meta.xml
<CustomField>
    <fullName>ExternalNonRebatePriceOption__c</fullName>
    <label>External Non Rebate Price Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>