force-app/main/default/objects/Sales_Organization__c/fields/ExternalRebatePriceOption__c.field-meta.xml
<CustomField>
    <fullName>ExternalRebatePriceOption__c</fullName>
    <label>Rebate Price Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>