force-app/main/default/objects/Sales_Organization__c/fields/French_TariffSurchargeNotes__c.field-meta.xml
<CustomField>
    <fullName>French_TariffSurchargeNotes__c</fullName>
    <label>French Surcharge Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>