force-app/main/default/objects/Sales_Organization__c/fields/HF__c.field-meta.xml
<CustomField>
    <fullName>HF__c</fullName>
    <label>HF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>