force-app/main/default/objects/Sales_Organization__c/fields/InternalPriceOption__c.field-meta.xml
<CustomField>
    <fullName>InternalPriceOption__c</fullName>
    <label>Internal Price Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>