force-app/main/default/objects/Sales_Organization__c/fields/InternationalPriceRouting__c.field-meta.xml
<CustomField>
    <fullName>InternationalPriceRouting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>InternationalPriceRouting</label>
    <type>Checkbox</type>
</CustomField>