force-app/main/default/objects/Sales_Organization__c/fields/InternationalQuoteExpirationDays__c.field-meta.xml
<CustomField>
    <fullName>InternationalQuoteExpirationDays__c</fullName>
    <label>International Quote Expiration Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>