force-app/main/default/objects/Sales_Organization__c/fields/LastCostIncreaseDate__c.field-meta.xml
<CustomField>
    <fullName>LastCostIncreaseDate__c</fullName>
    <label>Last Cost Increase Date</label>
    <type>Date</type>
</CustomField>