force-app/main/default/objects/Sales_Organization__c/fields/PriceIncreaseDate__c.field-meta.xml
<CustomField>
    <fullName>PriceIncreaseDate__c</fullName>
    <label>Price Increase Date</label>
    <type>Date</type>
</CustomField>