force-app/main/default/objects/Sales_Organization__c/fields/ProposalLineItemLimit__c.field-meta.xml
<CustomField>
    <fullName>ProposalLineItemLimit__c</fullName>
    <label>Proposal Line Item Limit</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>