force-app/main/default/objects/Sales_Organization__c/fields/ProsBillToClassificationOne__c.field-meta.xml
<CustomField>
    <fullName>ProsBillToClassificationOne__c</fullName>
    <label>Pros Bill To Classification One</label>
    <length>255</length>
    <type>Text</type>
</CustomField>