force-app/main/default/objects/Sales_Organization__c/fields/ProsBillToClassificationTwo__c.field-meta.xml
<CustomField>
    <fullName>ProsBillToClassificationTwo__c</fullName>
    <label>Pros Bill To Classification Two</label>
    <length>255</length>
    <type>Text</type>
</CustomField>