force-app/main/default/objects/Sales_Organization__c/fields/ProsBillToCustomerType__c.field-meta.xml
<CustomField>
    <fullName>ProsBillToCustomerType__c</fullName>
    <label>Pros Bill To Customer Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>