force-app/main/default/objects/Sales_Organization__c/fields/ProsBillToMarketSegment__c.field-meta.xml
<CustomField>
    <fullName>ProsBillToMarketSegment__c</fullName>
    <label>Pros Bill To Market Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>