force-app/main/default/objects/Sales_Organization__c/fields/ProsBillToMarketSubSegment__c.field-meta.xml
<CustomField>
    <fullName>ProsBillToMarketSubSegment__c</fullName>
    <label>Pros Bill To Market Sub Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>