force-app/main/default/objects/Sales_Organization__c/fields/ProsBillToPrimaryBusType__c.field-meta.xml
<CustomField>
    <fullName>ProsBillToPrimaryBusType__c</fullName>
    <label>Pros Bill To Primary Bus Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>