force-app/main/default/objects/Sales_Organization__c/fields/ProsQuoteToClassificationOne__c.field-meta.xml
<CustomField>
    <fullName>ProsQuoteToClassificationOne__c</fullName>
    <label>Pros Quote To Classification One</label>
    <length>255</length>
    <type>Text</type>
</CustomField>