force-app/main/default/objects/Sales_Organization__c/fields/ProsQuoteToClassificationTwo__c.field-meta.xml
<CustomField>
    <fullName>ProsQuoteToClassificationTwo__c</fullName>
    <label>Pros Quote To Classification Two</label>
    <length>255</length>
    <type>Text</type>
</CustomField>