force-app/main/default/objects/Sales_Organization__c/fields/ProsQuoteToCustomerType__c.field-meta.xml
<CustomField>
    <fullName>ProsQuoteToCustomerType__c</fullName>
    <label>Pros Quote To Customer Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>