force-app/main/default/objects/Sales_Organization__c/fields/ProsQuoteToMarketSegment__c.field-meta.xml
<CustomField>
    <fullName>ProsQuoteToMarketSegment__c</fullName>
    <label>Pros Quote To Market Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>