force-app/main/default/objects/Sales_Organization__c/fields/ProsQuoteToMarketSubSegment__c.field-meta.xml
<CustomField>
    <fullName>ProsQuoteToMarketSubSegment__c</fullName>
    <label>Pros Quote To Market Sub Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>