force-app/main/default/objects/Sales_Organization__c/fields/ProsQuoteToPrimaryBusType__c.field-meta.xml
<CustomField>
    <fullName>ProsQuoteToPrimaryBusType__c</fullName>
    <label>Pros Quote To Primary Bus Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>