force-app/main/default/objects/Sales_Organization__c/fields/RebateExpirationDays__c.field-meta.xml
<CustomField>
    <fullName>RebateExpirationDays__c</fullName>
    <label>Rebate Expiration Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>