force-app/main/default/objects/Sales_Organization__c/fields/RebateExtAllow__c.field-meta.xml
<CustomField>
    <fullName>RebateExtAllow__c</fullName>
    <label>Rebate Allowable Extensions</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>