force-app/main/default/objects/Sales_Organization__c/fields/RebateExtDays__c.field-meta.xml
<CustomField>
    <fullName>RebateExtDays__c</fullName>
    <label>RebateExtDays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>