force-app/main/default/objects/Sales_Organization__c/fields/RebateMsg__c.field-meta.xml
<CustomField>
    <fullName>RebateMsg__c</fullName>
    <label>RebateMsg</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>