force-app/main/default/objects/Sales_Organization__c/fields/Sales_Organization_ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_Organization_ID__c</fullName>
    <displayFormat>SEO-{0000}</displayFormat>
    <label>Sales Organization ID</label>
    <type>AutoNumber</type>
</CustomField>