force-app/main/default/objects/Sales_Organization__c/fields/SPA_Authorization_Period__c.field-meta.xml
<CustomField>
    <fullName>SPA_Authorization_Period__c</fullName>
    <label>SPA Authorization Period</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>