force-app/main/default/objects/Sales_Organization__c/fields/SPA_Transfer_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>SPA_Transfer_Eligibility__c</fullName>
    <label>SPA Transfer Period</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>