force-app/main/default/objects/Sales_Organization__c/fields/SPAAuthorizationProtectThresholdMax__c.field-meta.xml
<CustomField>
    <fullName>SPAAuthorizationProtectThresholdMax__c</fullName>
    <label>SPA Authorization Protect Threshold Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>