force-app/main/default/objects/Sales_Organization__c/fields/SPAAuthorizationProtectThresholdMin__c.field-meta.xml
<CustomField>
    <fullName>SPAAuthorizationProtectThresholdMin__c</fullName>
    <label>SPA Authorization Protect Threshold Min</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>