force-app/main/default/objects/Sales_Organization__c/fields/SPADropShipPriceOption__c.field-meta.xml
<CustomField>
    <fullName>SPADropShipPriceOption__c</fullName>
    <label>SPA Drop Ship Price Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>