force-app/main/default/objects/Sales_Organization__c/fields/SPAInToStockPriceOption__c.field-meta.xml
<CustomField>
    <fullName>SPAInToStockPriceOption__c</fullName>
    <label>SPA In To Stock Price Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>