force-app/main/default/objects/Sales_Organization__c/fields/SpaRequestAgreementLimit__c.field-meta.xml
<CustomField>
    <fullName>SpaRequestAgreementLimit__c</fullName>
    <label>SpaRequestAgreementLimit</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>