force-app/main/default/objects/Sales_Organization__c/fields/SpaRequestBenefitLimit__c.field-meta.xml
<CustomField>
    <fullName>SpaRequestBenefitLimit__c</fullName>
    <label>SpaRequestBenefitLimit</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>