force-app/main/default/objects/Sales_Organization__c/fields/SpaRequestEligibilityLimit__c.field-meta.xml
<CustomField>
    <fullName>SpaRequestEligibilityLimit__c</fullName>
    <label>SpaRequestEligibilityLimit</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>