force-app/main/default/objects/Sales_Organization__c/fields/SpaTransferExpireEligibility__c.field-meta.xml
<CustomField>
    <fullName>SpaTransferExpireEligibility__c</fullName>
    <label>SpaTransferExpireEligibility</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>