force-app/main/default/objects/Sales_Organization__c/fields/SpjrAgreementExpirationDays__c.field-meta.xml
<CustomField>
    <fullName>SpjrAgreementExpirationDays__c</fullName>
    <label>SpjrAgreementExpirationDays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>