force-app/main/default/objects/Sales_Organization__c/fields/StandardPaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>StandardPaymentTerms__c</fullName>
    <label>StandardPaymentTerms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>