force-app/main/default/objects/Sales_Organization__c/fields/TariffSurchargeToggle__c.field-meta.xml
<CustomField>
    <fullName>TariffSurchargeToggle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TariffSurchargeToggle</label>
    <type>Checkbox</type>
</CustomField>